# beeware

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  FUNDABLE_PROJECTS.md  LICENSE  MANIFEST.in  README.md  README.rst  beeware.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_status.yml  ci.yml  config-file-deps-bump.yml  pre-commit-update.yml  publish.yml  release.yml  translate.yml
changes/: 515.docs.rst
docker/: Dockerfile  README.md
docs/: Makefile  conf.py  index.rst  make.bat  requirements_docs.txt  spelling_wordlist
docs/_static/resources/: custom.css
docs/background/: faq.rst  index.rst  releases.rst  roadmap.rst  success.rst
docs/de/: index.rst
docs/de/tutorial/: tutorial-0.rst  tutorial-4.rst  tutorial-6.rst  tutorial-7.rst
docs/de/tutorial/tutorial-5/: android.rst
docs/how-to/: code.rst  contribute.rst  docs.rst  get-started.rst  index.rst
docs/locales/de/LC_MESSAGES/: index.po  tutorial.po
docs/locales/de/LC_MESSAGES/how-to/: index.po
docs/locales/de/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/de/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/de/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/de_DE/LC_MESSAGES/: index.po  sphinx.po  tutorial.po
docs/locales/es/LC_MESSAGES/: index.po  tutorial.po
docs/locales/es/LC_MESSAGES/how-to/: index.po
docs/locales/es/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/es/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/es/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/fr/LC_MESSAGES/: index.po  tutorial.po
docs/locales/fr/LC_MESSAGES/how-to/: index.po
docs/locales/fr/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/fr/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/fr/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/it/LC_MESSAGES/: index.po
docs/locales/it/LC_MESSAGES/how-to/: index.po
docs/locales/it/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/it/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/it/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/pt/LC_MESSAGES/: index.po
docs/locales/pt/LC_MESSAGES/how-to/: index.po
docs/locales/pt/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/pt/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/pt/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/zh_CN/LC_MESSAGES/: index.po  tutorial.po
docs/locales/zh_CN/LC_MESSAGES/how-to/: index.po
docs/locales/zh_CN/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/zh_CN/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/zh_CN/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/locales/zh_TW/LC_MESSAGES/: index.po
docs/locales/zh_TW/LC_MESSAGES/how-to/: index.po
docs/locales/zh_TW/LC_MESSAGES/tutorial/: tutorial-0.po  tutorial-1.po  tutorial-10.po  tutorial-11.po  tutorial-2.po  tutorial-3.po  tutorial-4.po  tutorial-6.po  tutorial-7.po  tutorial-8.po  tutorial-9.po
docs/locales/zh_TW/LC_MESSAGES/tutorial/topics/: camera-access.po  custom-icons.po  index.po  testing.po
docs/locales/zh_TW/LC_MESSAGES/tutorial/tutorial-5/: android.po  iOS.po  index.po
docs/reference/: index.rst
docs/sphinx/: pyvenv.cfg
docs/sphinx/Scripts/: activate  activate.bat  livereload-script.py  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
docs/tutorial/: index.rst  tutorial-0.rst  tutorial-1.rst  tutorial-10.rst  tutorial-11.rst  tutorial-2.rst  tutorial-3.rst  tutorial-4.rst  tutorial-5.rst  tutorial-6.rst  tutorial-7.rst  tutorial-8.rst  tutorial-9.rst  tutorial-camera.rst
docs/tutorial/images/windows/: Thumbs.db
docs/tutorial/subtutorials/: camera-access.rst  index.rst
docs/tutorial/topic-subtutorials/: index.rst
docs/tutorial/topics/: camera-access.rst  custom-icons.rst  index.rst  testing.rst
docs/tutorial/tutorial-4/: android.rst  iOS.rst  index.rst
docs/tutorial/tutorial-5/: android.rst  iOS.rst  index.rst
src/: beeware.py
tests/: README
