[build-system]
requires = [
    "setuptools==72.1.0",
    "setuptools_scm==8.1.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "beeware"
description = "A metapackage to install the full BeeWare suite of tools."
readme = "README.rst"
requires-python = ">= 3.8"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "briefcase",
]

[project.urls]
Homepage = "https://beeware.org"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://docs.beeware.org/"
Source = "https://github.com/beeware"

[project.optional-dependencies]
dev = [
    # Pre-commit 3.6.0 deprecated support for Python 3.8
    "pre-commit == 3.5.0 ; python_version < '3.9'",
    "pre-commit == 3.8.0 ; python_version >= '3.9'",
    "pytest == 8.3.2",
    "pytest-tldr == 0.2.5",
    "setuptools_scm == 8.1.0",
    "tox == 4.16.0",
]
# Docs are always built on a specific Python version; see RTD and tox config files.
docs = [
    "furo == 2024.7.18",
    "pyenchant == 3.2.2",
    "sphinx == 8.0.2",
    "sphinx_design == 0.6.1",
    "sphinx_tabs == 3.4.5",
    "sphinx-autobuild == 2024.4.16",
    "sphinx-copybutton == 0.5.2",
    "sphinx-intl == 2.2.0",
    "sphinxcontrib-spelling == 8.0.0",
]

[tool.codespell]
skip = ".git,*.pdf,*.svg"
# the way to make case sensitive skips of words etc
ignore-regex = "\bNd\b"
ignore-words-list = "re-use"

[tool.isort]
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.check-wheel-contents]
# WOO7: wheel library is empty
# W008: wheel is empty
ignore = "W007,W008"
