[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==9.2.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "beeware"
description = "A metapackage to install the full BeeWare suite of tools."
readme = "README.md"
requires-python = ">= 3.10"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
]
dependencies = [
    "briefcase",
]

[project.urls]
Homepage = "https://beeware.org"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://docs.beeware.org/"
Source = "https://github.com/beeware"

[project.optional-dependencies]
dev = [
    "pre-commit == 4.3.0",
    "pytest == 8.4.2",
    "pytest-tldr == 0.2.5",
    "setuptools_scm == 9.2.0",
    "tox == 4.30.2",
]
# Docs are always built on a specific Python version; see RTD and tox config files.
docs = [
    "furo == 2025.7.19",
    "pyenchant == 3.2.2",
    "sphinx == 8.2.3",
    "sphinx_design == 0.6.1",
    "sphinx_tabs == 3.4.7",
    "sphinx-autobuild == 2024.10.3",
    "sphinx-copybutton == 0.5.2",
    "sphinx-intl == 2.3.2",
    "sphinxcontrib-spelling == 8.0.1",
]

[tool.codespell]
skip = ".git,*.pdf,*.svg"
# the way to make case sensitive skips of words etc
ignore-regex = "\bNd\b"
ignore-words-list = "re-use"

[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.check-wheel-contents]
# WOO7: wheel library is empty
# W008: wheel is empty
ignore = "W007,W008"

[tool.ruff.lint]
# In addition to the default rules, these additional rules will be used:
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]
ignore = [
 "F821",  # Undefined name `tags`
 "E501"  # Line too long
 ]

[tool.ruff.lint.isort]
combine-as-imports = true
