[metadata]
description-file = README.rst

[bdist_wheel]
universal=1

[tools:pytest]
addopts = --ignore node_modules

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=docs/*,build/*
max-complexity = 15
max-line-length = 119

[pep8]
# https://pep8.readthedocs.org/en/latest/
# W503 raised if operators are after line break
ignore = W503
