[metadata]
name = beeware
version = attr: beeware.__version__
url = http://beeware.org/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://briefcase.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/briefcase/issues
    Source = https://github.com/beeware/briefcase
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_file = LICENSE
description = Tools to support converting a Python project into a standalone native application.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF=8
keywords =

[options]
zip_safe = False
python_requires = >= 3.5
package_dir =
    = src
py_modules = beeware
install_requires =
    briefcase == 0.3.0.dev1
    toga >= 0.3.0.dev15

[options.entry_points]
console_scripts =
    beeware = beeware:main

[aliases]
test=pytest

[bdist_wheel]
universal=1

[tools:pytest]
addopts = --ignore node_modules

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv/*,\
    local/*,\
    docs/*,\
    .eggs/*
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[isort]
skip =
    docs/conf.py
    venv
multi_line_output=3

[tool:pytest]
testpaths = tests
