[metadata]
name = beeware
version = 0.3.0
url = http://beeware.org/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://briefcase.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/briefcase/issues
    Source = https://github.com/beeware/briefcase
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_file = LICENSE
description = A metapackage to install the full BeeWare suite of tools.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =

[options]
zip_safe = False
python_requires = >= 3.5
install_requires =
    briefcase >= 0.3.0

[options.extras_require]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev =
    tox == 4.4.2
docs =
    furo == 2022.12.7
    pyenchant == 3.2.2
    sphinx == 6.1.3
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinxcontrib-spelling == 7.7.0
